// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`securities translateToSecurities multiple mixed securities 1`] = `
Array [
  Object {
    "description": "a description",
    "scheme": "basic",
    "type": "http",
  },
  Object {
    "description": "a description",
    "flows": Object {
      "implicit": Object {
        "authorizationUrl": "a url",
        "scopes": Object {},
      },
    },
    "type": "oauth2",
  },
  Object {
    "description": "a description",
    "in": "query",
    "name": "a name",
    "type": "apiKey",
  },
]
`;

exports[`securities translateToSecurities single apiKey security 1`] = `
Array [
  Object {
    "description": "a description",
    "in": "query",
    "name": "a name",
    "type": "apiKey",
  },
]
`;

exports[`securities translateToSecurities single basic security 1`] = `
Array [
  Object {
    "description": "a description",
    "scheme": "basic",
    "type": "http",
  },
]
`;

exports[`securities translateToSecurities single oauth2 security with accessCode flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "authorizationCode": Object {
        "authorizationUrl": "an authorization url",
        "scopes": Object {
          "scope": "value",
        },
        "tokenUrl": "a token url",
      },
    },
    "type": "oauth2",
  },
]
`;

exports[`securities translateToSecurities single oauth2 security with application flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "clientCredentials": Object {
        "scopes": Object {
          "scope": "value",
        },
        "tokenUrl": "a token url",
      },
    },
    "type": "oauth2",
  },
]
`;

exports[`securities translateToSecurities single oauth2 security with implicit flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "implicit": Object {
        "authorizationUrl": "a url",
        "scopes": Object {
          "scope": "value",
        },
      },
    },
    "type": "oauth2",
  },
]
`;

exports[`securities translateToSecurities single oauth2 security with password flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "password": Object {
        "scopes": Object {
          "scope": "value",
        },
        "tokenUrl": "a token url",
      },
    },
    "type": "oauth2",
  },
]
`;
